@@ -1017,10 +1017,15 @@ void HandleMapRequestKeepRaised(Window KeepRaised, FvwmWindow *ReuseWin)
 
   if (ReuseWin == NULL)
   {
-    if(XFindContext(dpy, Event.xany.window, FvwmContext,
-		    (caddr_t *)&Tmp_win)==XCNOENT)
+    if (XFindContext(dpy, Event.xany.window, FvwmContext,
+		     (caddr_t *)&Tmp_win)==XCNOENT)
     {
       Tmp_win = NULL;
+    }
+    else if (IS_MAP_PENDING(Tmp_win))
+    {
+      /* The window is already going to be mapped, no need to do that twice */
+      return;
     }
   }
   else
@@ -1067,15 +1072,15 @@ void HandleMapRequestKeepRaised(Window KeepRaised, FvwmWindow *ReuseWin)
   {
     int state;
 
-    if(Tmp_win->wmhints && (Tmp_win->wmhints->flags & StateHint))
+    if (Tmp_win->wmhints && (Tmp_win->wmhints->flags & StateHint))
       state = Tmp_win->wmhints->initial_state;
     else
       state = NormalState;
 
-    if(DO_START_ICONIC(Tmp_win))
+    if (DO_START_ICONIC(Tmp_win))
       state = IconicState;
 
-    if(isIconicState != DontCareState)
+    if (isIconicState != DontCareState)
       state = isIconicState;
 
     switch (state)
@@ -1324,6 +1329,26 @@ void HandleMapNotify(void)
 }
 
 
+Bool check_map_request(Display *display, XEvent *event, char *arg)
+{
+  unsigned long *rc;
+
+  if (event->type != MapRequest)
+  {
+    return False;
+  }
+  if (event->xmaprequest.window != *(unsigned long *)arg)
+  {
+    return False;
+  }
+  rc = (unsigned long *)arg;
+  (*arg)++;
+
+  /* Yes, it is correct that this function always returns False.  See
+   * comment below. */
+  return False;
+}
+
 /***********************************************************************
  *
  *  Procedure:
@@ -1375,8 +1400,34 @@ void HandleUnmapNotify(void)
   }
   if (must_return)
     return;
-  if(weMustUnmap)
-    XUnmapWindow(dpy, Event.xunmap.window);
+
+  if (weMustUnmap)
+  {
+    unsigned long win = (unsigned long)Event.xunmap.window;
+    Bool is_map_request_pending;
+
+    /* Using XCheckTypedWindowEvent() does not work here.  I don't have the
+     * slightest idea why, but using XCheckIfEvent() with the appropriate
+     * predicate procedure works fine. */
+    XCheckIfEvent(dpy, &dummy, check_map_request, (char *)&win);
+    /* Unfortunately, there is no procedure in X that simply tests if an
+     * event of a certain type in on the queue without waiting and without
+     * removing it from the queue.  XCheck...Event() does not wait but
+     * removes the event while XPeek...() does not remove the event but
+     * waits.  Now, this is a *real* hack:
+     *
+     * The predicate procedure used in the call always returns False.  Thus,
+     * no event is ever removed from the queue.  But when it is called with
+     * the correct event type and window, it adds one to the unsigned long
+     * pointer that was passed in as its last argument.  Of course this is
+     * using totally undocumented 'features' and may be very inefficient
+     * (im many events are pending). */
+    is_map_request_pending = (win != (unsigned long)Event.xunmap.window);
+    if (!is_map_request_pending)
+    {
+      XUnmapWindow(dpy, Event.xunmap.window);
+    }
+  }
   if(Tmp_win ==  Scr.Hilite)
   {
     Scr.Hilite = NULL;
